# decathlon

./: README.md
task1/: Cargo.toml
task1/src/: main.rs
task2/: Cargo.toml
task2/src/: cli.rs  config.rs  main.rs  models.rs  weather.rs
task3/: Cargo.toml
task3/src/: cli.rs  config.rs  db.rs  main.rs  models.rs  repository.rs  weather.rs
