[package]
name = "task3"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"]}
dotenvy = "0.15"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
chrono = "0.4"